# cg

./: .gitignore  README.md  render.yaml
lab1-color-model/: .gitignore  README.md  package-lock.json  package.json  vercel.json
lab1-color-model/src/: App.css  App.js  ColorPicker.js  colorUtils.js
lab2-image-processing/: Makefile  README.md  main.py  processor.py  report.md  requirements.txt
lab2-image-processing/templates/: index.html
lab3-rasterization/: CMakeLists.txt  Makefile  algorithms.h  canvas.cpp  canvas.h  main.cpp  mainwindow.cpp  mainwindow.h
lab4-cutting_edges/: input.txt  main.py
